syntax = "proto3";

package api.v1.mesh;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ThisaraWeerakoon/Agent-Mesh/pkg/api/v1/mesh";

// A2AMeshService defines the Sidecar Mesh Protocol adhering to the Agent2Agent (A2A) Protocol Specification.
service A2AMeshService {
  // Synchronous start of a task.
  rpc SendTask(TaskSendRequest) returns (Task);

  // Bidirectional streaming for real-time interaction.
  rpc StreamTask(stream StreamEvent) returns (stream StreamEvent);

  // Retrieve the current state of a task.
  rpc GetTask(GetTaskRequest) returns (Task);

  // Cancel an ongoing task.
  rpc CancelTask(CancelTaskRequest) returns (google.protobuf.Empty);
}

// TaskSendRequest initiates a new task.
message TaskSendRequest {
  // Context ID for multi-turn conversations.
  string context_id = 1;
  // Target Agent ID for routing.
  string target_agent_id = 2;
  // The initial message to start the task.
  Message message = 3;
}

// GetTaskRequest retrieves a task by ID.
message GetTaskRequest {
  string id = 1;
}

// CancelTaskRequest cancels a task by ID.
message CancelTaskRequest {
  string id = 1;
}

// Task represents the central unit of work.
message Task {
  string id = 1;
  string session_id = 2;
  
  enum Status {
    STATUS_UNSPECIFIED = 0;
    SUBMITTED = 1;
    WORKING = 2;
    COMPLETED = 3;
    FAILED = 4;
  }
  Status status = 3;
  
  repeated Message history = 4;
  repeated Artifact artifacts = 5;
}

// Message represents a communication turn.
message Message {
  string role = 1;
  google.protobuf.Timestamp created_at = 2;
  repeated Part parts = 3;
}

// Part represents the content of a message.
message Part {
  oneof content {
    string text_part = 1;
    FilePart file_part = 2;
    google.protobuf.Struct data_part = 3;
  }
}

// FilePart represents a file content, either inline or via URI.
message FilePart {
  oneof data {
    bytes inline_bytes = 1;
    string uri = 2;
  }
  string mime_type = 3;
}

// Artifact represents the final output of a task.
message Artifact {
  string id = 1;
  string name = 2;
  string mime_type = 3;
  oneof content {
    bytes bytes = 4;
    string uri = 5;
  }
}

// StreamEvent wraps A2A event types for streaming.
message StreamEvent {
  oneof event {
    TaskStart task_start = 3;
    TaskStatusUpdate status_update = 1;
    TaskArtifactUpdate artifact_update = 2;
  }
}

// TaskStart initiates a new task in the stream.
message TaskStart {
  TaskSendRequest request = 1;
}

// TaskStatusUpdate represents a change in task status.
message TaskStatusUpdate {
  string task_id = 1;
  Task.Status status = 2;
  string message = 3; // Optional status message
}

// TaskArtifactUpdate represents a new artifact generated by the task.
message TaskArtifactUpdate {
  string task_id = 1;
  Artifact artifact = 2;
}
